5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1723_2504.log
== TEST (2019-05-15 23:02:14) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = float(input("Percentual de multiplicação diária do vírus: "))/100
pl = float(input("Percentual de multiplicação diária dos leucócitos: "))/100
k = 0
while((leu*2)>=vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:03:20) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicação diária do vírus: ")))/100
pl = (float(input("Percentual de multiplicação diária dos leucócitos: ")))/100
k = 0
while((leu*2)>=vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:04:02) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)>=vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:04:31) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)<=vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:05:53) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)==vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:06:35) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)!=vir):
	vir = vir*pv
	leu = leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:09:25) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)==cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:10:00) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)!=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:10:31) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)>=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:10:56) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:12:05) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:12:35) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:13:13) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.520205
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
7
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
3
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:13:57) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
   print(k)
	
-- EXECUTION TIME:
0.394835
-- ERROR:
  File "/home/codebench/codes/1723/2504/main.py", line 12
    print(k)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:22:14) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)<=vir):
	vir =vir + vir*pv
	leu =leu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:22:23) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)<=vir):
	vir =vir + vir*pv
	leu =leu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:24:31) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)<=vir):
	vir =vir + vir*pv
	leu =leu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:29:18) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)==cvir):
	cvir = cvir*pv
	cleu = cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:30:02) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)!=cvir):
	cvir = cvir*pv
	cleu = cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:30:32) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)>=cvir):
	cvir = cvir*pv
	cleu = cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:30:56) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir = cvir*pv
	cleu = cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:31:15) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir = cvir*pv
	cleu = cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:31:52) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:32:25) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:34:16) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)==cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
2.23123
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:45:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.164523
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:46:18) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:46:49) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:47:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.226185
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:47:57) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)!=cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- OUTPUT:
35199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:49:16) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + cvir*pv
	cleu =cleu + cleu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
2.09836
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
7
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
3
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:50:38) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
k = 0
while((leu*2)<vir):
	vir =vir + vir*pv
	leu =leu + leu*pl
	print(vir , leu)
	k = k+1
print(k)
	
-- OUTPUT:
357637.5 9625.0
364790.25 16843.75
372086.055 29476.5625
379527.7761 51583.984375
387118.331622 90271.97265625
394860.69825444004 157975.9521484375
402757.91221952887 276457.9162597656
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:54:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.689935
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:55:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.75766
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:56:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (float(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (float(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
0.953231
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:01:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
1.10702
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
quantos virus: quantos leucocitos: Percentual de multiplicacao diaria do virus: Percentual de multiplicacao diaria dos leucocitos:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:10:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
1.10633
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:11:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
1.44513
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
quantos virus: quantos leucocitos: Percentual de multiplicacao diaria do virus: Percentual de multiplicacao diaria dos leucocitos: 4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
quantos virus: quantos leucocitos: Percentual de multiplicacao diaria do virus: Percentual de multiplicacao diaria dos leucocitos:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:11:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)!=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
2187.77
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:13:01) 
-- CODE:
vir = int(input("quantos virus: "))
leu = int(input("quantos leucocitos: "))
pv = (int(input("Percentual de multiplicacao diaria do virus: ")))/100
pl = (int(input("Percentual de multiplicacao diaria dos leucocitos: ")))/100
cvir = vir
cleu = leu
k = 0
while((cleu*2)<=cvir):
	cvir =cvir + vir*pv
	cleu =cleu + leu*pl
	k = k+1
print(k)
	
-- EXECUTION TIME:
2.19943
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
